--- a/public/chat.css
+++ b/public/chat.css
@@ -12,7 +12,7 @@ body {
 html {
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(to right, #57c1eb 0%, #246fa8 100%);
-    font-size: 15px;
+    font-size: 10px;
 }
 
 body {
@@ -21,10 +21,112 @@ body {
 }
 
 #chat-container {
+    display: grid;
+    grid: 
+        'search-container chat-title' 71px
+        'conversation-list chat-message-list' 1fr
+        'new-message-container chat-form' 78px
+        / 275px 1fr;
     min-width: 800px;
     max-width: 1000px;
-    min-width: 800px;
+    max-height: 800px;
+    width: 100%;
     height: 95vh;
     background: #FFF;
     border-radius: 10px;
+}
+
+#search-container,
+#conversation-list,
+#new-message-container {
+    background: #0048aa
+}
+
+#search-container {
+    display: grid;
+    align-items: center;
+    padding: 0 20px;
+    grid-area: search-container;
+    border-radius:  10px 0 0 0;
+    box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.75);
+    z-index: 1;
+}
+
+#search-container input {
+    color: #eee;
+    outline: none;
+    font-weight: bold;
+    border-radius: 2px;
+    height: 30px;
+    width: 17em;
+    border: 0;
+    padding-left: 48px;
+    padding-right: 20px;
+    font-size: 1.4rem;
+    background: url('./img/search.svg') no-repeat rgba(255, 255, 255, 0.3);
+    background-position: 15px center;
+    background-size: 20px 20px;
+}
+
+#search-container input::placeholder {
+    color: #ddd;
+    font-weight: bold;
+}
+
+#conversation-list{
+    grid-area: conversation-list;
+}
+
+#new-message-container {
+    display: grid;
+    grid: 40px / 40px;
+    align-content: center;
+    grid-area: new-message-container;
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
+    border-radius: 0 0 0 10px;
+    padding: 0 15px;
+}
+
+#new-message-container a {
+    display: grid;
+    place-content: center center;
+    background: #eee;
+    border-radius: 100%;
+    color: #002c88;
+    text-decoration: none;
+    font-size: 3.6rem;
+}
+
+#chat-title,
+#chat-form {
+    background: #eee;
+}
+
+#chat-title {
+    display: grid;
+    grid: 36px / 1fr 36px;
+    align-content: center;
+    align-items: center;
+    grid-area: chat-title;
+    color: #0048aa;
+    font-weight: bold;
+    font-size: 2.0rem;
+    border-radius: 0 10px 0 0;
+    box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.75);
+    padding: 0 20px;
+}
+
+#chat-title > img {
+    cursor: pointer;
+    width: 4rem;
+}
+
+#chat-message-list{
+    grid-area: chat-message-list
+}
+
+#chat-form {
+    grid-area: chat-form;
+    border-radius: 0 0 10px 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
 }
