--- a/views/auth/signup.edge
+++ b/views/auth/signup.edge
@@ -20,22 +20,34 @@
 									</button>
 								</div>
 								<p>or use your email for registration:</p>
-								<form class="signup">
+								<form class="signup" method="POST" action="">
+									@if(error)
+									<div class="alert alert-danger" role="alert">
+										{{error}}
+										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+									</div>
+									@endif
 									<div class="form-parent">
 										<div class="form-group">
-											<input type="text" id="inputName" class="form-control" placeholder="Username" required>
+											<input type="text" name="username" id="inputName" class="form-control" placeholder="Username" required>
 											<button class="btn icon"><i class="material-icons">person_outline</i></button>
 										</div>
 										<div class="form-group">
-											<input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required>
+											<input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email Address" required>
 											<button class="btn icon"><i class="material-icons">mail_outline</i></button>
 										</div>
 									</div>
 									<div class="form-group">
-										<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+										<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 										<button class="btn icon"><i class="material-icons">lock_outline</i></button>
 									</div>
-									<button type="submit" class="btn button" formaction="index-2.html">Sign Up</button>
+									<div class="form-group">
+										<input type="password" name="confirmPassword" id="inputPassword" class="form-control" placeholder="Confirm Password" required>
+										<button class="btn icon"><i class="material-icons">lock_outline</i></button>
+									</div>
+									<button type="submit" name="submit" class="btn button" formaction="/register">Sign Up</button>
 									<div class="callout">
 										<span>Already a member? <a href="/login">Sign In</a></span>
 									</div>
