--- a/views/layouts/app.edge
+++ b/views/layouts/app.edge
@@ -26,7 +26,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="/js/all.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <!-- <script src="/js/chat.js"></script> -->
+    @if(isAuthenticated)
+        <script src="/js/chat.js"></script>
+    @endif
 </body>
 
 </html>
