adding auth middlewares

--- a/views/auth/signup.edge
+++ b/views/auth/signup.edge
@@ -9,14 +9,11 @@
 							<div class="content">
 								<h1>Create Account</h1>
 								<div class="third-party">
-									<button class="btn item bg-blue">
-										<i class="material-icons">pages</i>
+									<button class="btn item" style="font-size: 30px; color: white; background-color: #3b5998">
+										<i class="fab fa-facebook-f"></i>
 									</button>
-									<button class="btn item bg-teal">
-										<i class="material-icons">party_mode</i>
-									</button>
-									<button class="btn item bg-purple">
-										<i class="material-icons">whatshot</i>
+									<button class="btn item" style="font-size: 30px; color: white; background-color: #DB4437">
+										<i class="fab fa-google"></i>
 									</button>
 								</div>
 								<p>or use your email for registration:</p>
