--- a/views/auth/login.edge
+++ b/views/auth/login.edge
@@ -7,16 +7,13 @@
 				<div class="container">
 					<div class="col-md-12">
 						<div class="content">
-							<h1>Sign in to Swipe</h1>
+							<h1>Sign in to Chat</h1>
 							<div class="third-party">
-								<button class="btn item bg-blue">
-									<i class="material-icons">pages</i>
+								<button class="btn item" style="font-size: 30px; color: white; background-color: #3b5998">
+									<i class="fab fa-facebook-f"></i>
 								</button>
-								<button class="btn item bg-teal">
-									<i class="material-icons">party_mode</i>
-								</button>
-								<button class="btn item bg-purple">
-									<i class="material-icons">whatshot</i>
+								<button class="btn item" style="font-size: 30px; color: white; background-color: #DB4437">
+									<i class="fab fa-google"></i>
 								</button>
 							</div>
 							
@@ -55,7 +52,7 @@
 				<div class="col-md-12">
 					<div class="preference">
 						<h2>Hello, Friend!</h2>
-						<p>Enter your personal details and start your journey with Swipe today.</p>
+						<p>Enter your personal details and start your journey with us today.</p>
 						<a href="/register" class="btn button">Sign Up</a>
 					</div>
 				</div>
