--- a/views/chat.edge
+++ b/views/chat.edge
@@ -5,7 +5,8 @@
             <div class="sidebar-header raw">
                 <img class="col" src="/img/avatar.svg" alt="">
                 <h1 class="room-title col" style="margin-bottom: 0px">Chats</h1>
-                <form action="/logout" method="post" class="col">
+                <button type="button" class="logout" class="col-2" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-user-plus" style="color: black"></i></button>
+                <form action="/logout" method="post" class="col-2">
                     <button class="logout" type="submit" name="submit"><i class="fas fa-sign-out-alt"></i></button>
                 </form>
             </div>
@@ -139,4 +140,36 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add new contact</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                              </div>
+                    <form action="/add-friend" method="POST">
+                        <div class="form-group">
+                            <label for="recipient-name" class="col-form-label">Recipient email:</label>
+                            <input type="email" name="email" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="col-form-label">Message:</label>
+                            <textarea class="form-control" name="message" id="message-text"></textarea>
+                        </div>
+                        <button type="submit" name="submit" value="submit"  class="btn btn-primary">Send message</button>
+                    </form>
+                </div>
+                </div>
+            </div>
+        </div>
 @endsection
