--- a/views/chat.edge
+++ b/views/chat.edge
@@ -1,6 +1,6 @@
 @layout('layouts.app')
 @section('main')
-    <div class="chat">
+<div class="chat">
         <div id="sidebar" class="chat__sidebar">
             <div class="sidebar-header raw">
                 <img class="col" src="/img/avatar.svg" alt="">
@@ -12,125 +12,125 @@
             </div>
             <div class="sidebar-body">
                 <span class="sidebar-search-box">
-                    <label class="search-bar">
-                        <i class="fas fa-search"></i>
-                        <input id="search-bar-input" type="text" autocomplete="off" placeholder="Search Messenger">
-                    </label>
-                </span>
+                        <label class="search-bar">
+                            <i class="fas fa-search"></i>
+                            <input id="search-bar-input" type="text" autocomplete="off" placeholder="Search Messenger">
+                        </label>
+                    </span>
                 <div class="conversations">
                     <div class="contacts-title">
                         contacts
                     </div>
                     <ul class="contacts-list">
-
+    
                     </ul>
                     <ul class="conversation-list convo-list">
                         @each(contact in contacts)
-                            <li class="row conversation-list-item" data-roomId="{{contact.roomId}}" data-id="{{contact.userId._id}}">
-                                <div class="col-2 row align-self-center justify-content-center contact-img">
-                                    <img src="/img/fem-avatar.svg" alt="avatar">
-                                </div>
-                                <div class="col row align-self-center contact-username">
-                                        {{contact.userId.username}}  
-                                </div>
-                            </li>
+                        <li class="row conversation-list-item" data-roomId="{{contact.roomId}}" data-id="{{contact.userId._id}}">
+                            <div class="col-2 row align-self-center justify-content-center contact-img">
+                                <img src="/img/fem-avatar.svg" alt="avatar">
+                            </div>
+                            <div class="col row align-self-center contact-username">
+                                {{contact.userId.username}}
+                            </div>
+                        </li>
                         @endeach
                         <!--  <li class="row conversation-list-item message-unread">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-8 row align-self-center conversation-content message-unread">
-                                <h6 class="col-12 conversation-list-item-title">Bloc E</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">za3rora: hhhhh <span style="padding-left: 1em;font-weight: normal;color: #999999">12:00 PM</span></div>
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/avatar.svg" alt="avatar">
                                 </div>
-                            </div>
-                        </li>
-                        <li class="row conversation-list-item">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/fem-avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-10 row align-self-center conversation-content message-unread">
-                                <h6 class="col-12 conversation-list-item-title">Ntawa3na</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">louz: arabak <span style="padding-left: 1em;font-weight: normal;color: #999999">11:56 AM</span></div>
+                                <div class="col-8 row align-self-center conversation-content message-unread">
+                                    <h6 class="col-12 conversation-list-item-title">Bloc E</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">za3rora: hhhhh <span style="padding-left: 1em;font-weight: normal;color: #999999">12:00 PM</span></div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="row conversation-list-item message-active">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/boy-avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-10 row align-self-center conversation-content">
-                                <h6 class="col-12 conversation-list-item-title">Choose A Name</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">w 1 f analyse: diro start ! <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                            </li>
+                            <li class="row conversation-list-item">
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/fem-avatar.svg" alt="avatar">
                                 </div>
-                            </div>
-                        </li>
-                        <li class="row conversation-list-item">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/fem-avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-10 row align-self-center conversation-content">
-                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">verdinio: ha dkhol 9wd! <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                <div class="col-10 row align-self-center conversation-content message-unread">
+                                    <h6 class="col-12 conversation-list-item-title">Ntawa3na</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">louz: arabak <span style="padding-left: 1em;font-weight: normal;color: #999999">11:56 AM</span></div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="row conversation-list-item">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-10 row align-self-center conversation-content">
-                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                            </li>
+                            <li class="row conversation-list-item message-active">
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/boy-avatar.svg" alt="avatar">
                                 </div>
-                            </div>
-                        </li>
-                        <li class="row conversation-list-item">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/boy-avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-10 row align-self-center conversation-content">
-                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                <div class="col-10 row align-self-center conversation-content">
+                                    <h6 class="col-12 conversation-list-item-title">Choose A Name</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">w 1 f analyse: diro start ! <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="row conversation-list-item">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-10 row align-self-center conversation-content">
-                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                            </li>
+                            <li class="row conversation-list-item">
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/fem-avatar.svg" alt="avatar">
                                 </div>
-                            </div>
-                        </li>
-                        <li class="row conversation-list-item">
-                            <div class="col-4 row align-self-center justify-content-center conversation-img">
-                                <img src="/img/avatar.svg" alt="avatar">
-                            </div>
-                            <div class="col-10 row align-self-center conversation-content">
-                                <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
-                                <div class="row col-12 conversation-list-item-message">
-                                    <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                <div class="col-10 row align-self-center conversation-content">
+                                    <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">verdinio: ha dkhol 9wd! <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                    -->   
+                            </li>
+                            <li class="row conversation-list-item">
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/avatar.svg" alt="avatar">
+                                </div>
+                                <div class="col-10 row align-self-center conversation-content">
+                                    <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="row conversation-list-item">
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/boy-avatar.svg" alt="avatar">
+                                </div>
+                                <div class="col-10 row align-self-center conversation-content">
+                                    <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="row conversation-list-item">
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/avatar.svg" alt="avatar">
+                                </div>
+                                <div class="col-10 row align-self-center conversation-content">
+                                    <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="row conversation-list-item">
+                                <div class="col-4 row align-self-center justify-content-center conversation-img">
+                                    <img src="/img/avatar.svg" alt="avatar">
+                                </div>
+                                <div class="col-10 row align-self-center conversation-content">
+                                    <h6 class="col-12 conversation-list-item-title">Mohamed Feddag</h6>
+                                    <div class="row col-12 conversation-list-item-message">
+                                        <div class="conversation_list_message col-12">i think i'm busy ... <span style="padding-left: 1em;font-weight: normal;">10:33 AM</span></div>
+                                    </div>
+                                </div>
+                            </li>
+                        -->
                     </ul>
                 </div>
             </div>
         </div>
         <div class="chat__main">
             <div id="messages" class="chat__messages"></div>
-
+    
             <div class="compose">
                 <form id="message-form" autocomplete="off">
                     <input name="message" placeholder="Message">
@@ -140,36 +140,34 @@
             </div>
         </div>
     </div>
-
+    
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Add new contact</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                        <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                                <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
-                                </button>
-                              </div>
-                    <form action="/add-friend" method="POST">
+                    
+                    <form class="friend-request">
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label">Recipient email:</label>
-                            <input type="email" name="email" class="form-control" id="recipient-name">
+                            <input type="email" name="email" class="form-control" id="recipient-email">
                         </div>
                         <div class="form-group">
                             <label for="message-text" class="col-form-label">Message:</label>
                             <textarea class="form-control" name="message" id="message-text"></textarea>
                         </div>
-                        <button type="submit" name="submit" value="submit"  class="btn btn-primary">Send message</button>
                     </form>
                 </div>
+                <div class="modal-footer">
+                        <button type="submit" name="submit" class="btn btn-primary friend-request-btn">Send message</button>
                 </div>
             </div>
         </div>
+    </div>
+
 @endsection
